objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Case Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acknowledged-In Queue</fullName>
        </values>
        <values>
            <fullName>Awaiting customer response</fullName>
        </values>
        <values>
            <fullName>Closed - Added for Enhancements</fullName>
        </values>
        <values>
            <fullName>Closed - Bug Fixed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - Information Provided</fullName>
        </values>
        <values>
            <fullName>Closed - Request Fulfilled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Workaround Provided</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Case Process for Technical cases</fullName>
        <description>For technical cases only</description>
        <isActive>true</isActive>
        <values>
            <fullName>Acknowledged-In Queue</fullName>
        </values>
        <values>
            <fullName>Awaiting customer response</fullName>
        </values>
        <values>
            <fullName>Closed - Added for Enhancements</fullName>
        </values>
        <values>
            <fullName>Closed - Bug Fixed</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - Information Provided</fullName>
        </values>
        <values>
            <fullName>Closed - Obsolete</fullName>
        </values>
        <values>
            <fullName>Closed - Request Fulfilled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Workaround Provided</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Resolved - Pending PDK release</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Case Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Deployment</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal Response</fullName>
        </values>
        <values>
            <fullName>Closed - Added to Backlog</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Workaround Provided</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Information Provided</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>On Hold-Added to backlog</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Routed to Business</fullName>
        </values>
        <values>
            <fullName>Routed to IT</fullName>
        </values>
        <values>
            <fullName>Waiting for Approval</fullName>
        </values>
        <values>
            <fullName>Waiting on Requestor</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountThirdParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Third Party)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT( Account.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>BLANKVALUE(Account.Short_Name__c, Contact.Account.Short_Name__c)</formula>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <description>This Field is used to get the User who actually Approved or Rejected the Case Re-Open Request by Field Update used on Approval Process Name &quot;Case Reopen Request Approval Process&quot; .</description>
        <label>Actual Approver / Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <inlineHelpText>You can place your screen shot in this section.</inlineHelpText>
        <label>Additional Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Age_of_Case__c</fullName>
        <formula>IF(OR(Case_Record_Type_API__c = &apos;Logistics&apos;, Case_Record_Type_API__c = &apos;External_System&apos;, Case_Record_Type_API__c = &apos;TechnicalPDK&apos; ),TechnicalPDKCaseAge__c,IF( IsClosed=false, FLOOR(NOW()- CreatedDate) + (MOD(NOW()- CreatedDate, 1) * 24)/100, FLOOR( ClosedDate - CreatedDate) + (MOD(ClosedDate - CreatedDate, 1) * 24)/100 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Object__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Awards &amp; Compliments</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>CE Weekly</fullName>
                </value>
                <value>
                    <fullName>Customer Visitation</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>GlobalFoundryview</fullName>
                </value>
                <value>
                    <fullName>Informal Quotes</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Opportunity Programs</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Other ERP</fullName>
                </value>
                <value>
                    <fullName>Other SFDC</fullName>
                </value>
                <value>
                    <fullName>PX - Risk Start System</fullName>
                </value>
                <value>
                    <fullName>Sam Learning Cloud</fullName>
                </value>
                <value>
                    <fullName>User Settings and Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application that needs to work on the case.  Part of the initial implementation for Case Management.</description>
        <label>Application Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_Customer__c</fullName>
        <label>Ask Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question asked</fullName>
                </value>
                <value>
                    <fullName>Question answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ask_GF__c</fullName>
        <label>Ask GF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question asked</fullName>
                </value>
                <value>
                    <fullName>Question answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please don&apos;t use this field to define case ownership. The Owner field will determine the case owner. If the case owner is a queue, this field can be used to determine the point of contact.</description>
        <inlineHelpText>Please don&apos;t use this field to define case ownership. The Owner field will determine the case owner. If the case owner is a queue, this field can be used to determine the point of contact.</inlineHelpText>
        <label>Assignee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesAssignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttachmentUploadedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a user sending attachment by using email service then this flag will be checked.</description>
        <label>AttachmentUploadedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoAssignmentCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AutoAssignmentCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_process__c</fullName>
        <description>This field is used to categorize the type of cases that we are receiving.  This is part of the initial implementation of case management.</description>
        <inlineHelpText>Select the sub-system that most closely relates to this case.</inlineHelpText>
        <label>Business Process</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Apttus CPQ</fullName>
                </value>
                <value>
                    <fullName>Awards &amp; Compliments</fullName>
                </value>
                <value>
                    <fullName>Bugs</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>CDRS</fullName>
                </value>
                <value>
                    <fullName>CE Weekly</fullName>
                </value>
                <value>
                    <fullName>CLM Agreement</fullName>
                </value>
                <value>
                    <fullName>CMOS BU IP Requests</fullName>
                </value>
                <value>
                    <fullName>CuSR</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Customer Visitation</fullName>
                </value>
                <value>
                    <fullName>Development Justification (ROI)</fullName>
                </value>
                <value>
                    <fullName>Device Management</fullName>
                </value>
                <value>
                    <fullName>DIW Bid and Propose</fullName>
                </value>
                <value>
                    <fullName>DIW Options</fullName>
                </value>
                <value>
                    <fullName>DIW Others</fullName>
                </value>
                <value>
                    <fullName>Dropbox</fullName>
                </value>
                <value>
                    <fullName>eWSR</fullName>
                </value>
                <value>
                    <fullName>Export Declaration</fullName>
                </value>
                <value>
                    <fullName>Fab 9/10 Reports</fullName>
                </value>
                <value>
                    <fullName>FMS</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>FoundryView Access</fullName>
                </value>
                <value>
                    <fullName>Global FoundryView</fullName>
                </value>
                <value>
                    <fullName>GMPL/BX009</fullName>
                </value>
                <value>
                    <fullName>Informal Quotes</fullName>
                </value>
                <value>
                    <fullName>Internal User Access</fullName>
                </value>
                <value>
                    <fullName>IP Declaration Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCtoCaseCount__c</fullName>
        <label>CCtoCaseCount</label>
        <summaryFilterItems>
            <field>Case_Collaboration__c.Is_Subscribed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Collaboration__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CIT_ID__c</fullName>
        <externalId>true</externalId>
        <label>CIT ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CIT_Project_Title__c</fullName>
        <label>CIT Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_t_find_my_PDK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can’t find my PDK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseLink__c</fullName>
        <description>This formula field is used in customer case email template.</description>
        <formula>&quot;Customer View : &quot; + TRIM($Label.Case_Globalfoundry_Link+Id) + &quot; &quot; + BR() + &quot; &quot; + BR() + &quot; GLOBALFOUNDRIES Internal View : &quot; + TRIM($Label.Case_Link_for_Internal_User+Id)</formula>
        <label>CaseLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Team Member Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CasePortalLink__c</fullName>
        <formula>$Label.Case_Globalfoundry_Link+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasePortalLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Acknowledged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acknowledged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <label>Public Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_InProgress_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InProgress By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Info__c</fullName>
        <formula>CaseNumber  + &apos;:&apos; + IF(LEFT(OwnerId, 3) = &quot;005&quot;,  Owner:User.FirstName + &apos; &apos; + Owner:User.LastName ,  Owner:Queue.QueueName ) + &apos;:&apos; +   BLANKVALUE(Account_Name__c, &apos;NO ACCOUNT&apos;)  + &apos;:&apos; +   TEXT( DATEVALUE(CreatedDate))</formula>
        <label>Case No:Owner:Customer:Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Link_Internal__c</fullName>
        <label>Case Link Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Link_Parent__c</fullName>
        <label>Case Link Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Link_Portal__c</fullName>
        <label>Case Link Portal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager_Email__c</fullName>
        <description>This is to set case owner&apos;s manager email id</description>
        <label>Case Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_API__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <label>Case Record Type API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reopen_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reopen By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Requestor__c</fullName>
        <formula>SuppliedName + &apos; (&apos; + SuppliedEmail +&apos;)&apos;</formula>
        <label>Case Requestor via Web</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Score__c</fullName>
        <label>Case Resolution Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Satisfication_Score__c</fullName>
        <label>Case Satisfication Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design Enablement-Others</fullName>
                </value>
                <value>
                    <fullName>Design Enablement-PDK</fullName>
                </value>
                <value>
                    <fullName>DRC Waiver</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>ESD/Latch Up</fullName>
                </value>
                <value>
                    <fullName>Foundry Services</fullName>
                </value>
                <value>
                    <fullName>GFV-Associated Apps</fullName>
                </value>
                <value>
                    <fullName>GFV-Case Management</fullName>
                </value>
                <value>
                    <fullName>GFV-My Devices</fullName>
                </value>
                <value>
                    <fullName>GFV-My Wafer Orders</fullName>
                </value>
                <value>
                    <fullName>GFV-My Wafer Production</fullName>
                </value>
                <value>
                    <fullName>GFV-My Wafer Shipping</fullName>
                </value>
                <value>
                    <fullName>GFV-Others</fullName>
                </value>
                <value>
                    <fullName>GFV-PDK &amp; Design Documents</fullName>
                </value>
                <value>
                    <fullName>GFV-Product &amp; Services</fullName>
                </value>
                <value>
                    <fullName>GFV-TeamRooms</fullName>
                </value>
                <value>
                    <fullName>Global FoundryView</fullName>
                </value>
                <value>
                    <fullName>MPW</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>PDK</fullName>
                </value>
                <value>
                    <fullName>Process Technology</fullName>
                </value>
                <value>
                    <fullName>Product Services</fullName>
                </value>
                <value>
                    <fullName>Product Tapeout Request Form (PTRF)</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Reliability and Quality</fullName>
                </value>
                <value>
                    <fullName>Reliability and Yield</fullName>
                </value>
                <value>
                    <fullName>SFDC Application</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>SRAM</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access Request</fullName>
                </value>
                <value>
                    <fullName>Admin Request</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Bug Report</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Incident - Service Issue</fullName>
                </value>
                <value>
                    <fullName>Incident - Software Issue</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Push out request</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Reports and Analytics</fullName>
                </value>
                <value>
                    <fullName>Services - Access Control</fullName>
                </value>
                <value>
                    <fullName>Services - Access Problem</fullName>
                </value>
                <value>
                    <fullName>Services - Assistance using application</fullName>
                </value>
                <value>
                    <fullName>Services - Data Patch</fullName>
                </value>
                <value>
                    <fullName>Services - Enhancement</fullName>
                </value>
                <value>
                    <fullName>Services - Request for information</fullName>
                </value>
                <value>
                    <fullName>System Access Request</fullName>
                </value>
                <value>
                    <fullName>System Change Request</fullName>
                </value>
                <value>
                    <fullName>User Support</fullName>
                </value>
                <value>
                    <fullName>Wafer Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Comment__c</fullName>
        <label>Close Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question answered</fullName>
                </value>
                <value>
                    <fullName>No longer needed</fullName>
                </value>
                <value>
                    <fullName>Fix provided</fullName>
                </value>
                <value>
                    <fullName>Solved myself</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Requested_Date__c</fullName>
        <label>Close Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Short_Name__c</fullName>
        <formula>Contact.Account.Short_Name__c</formula>
        <label>Contact Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact.FirstName +&apos; &apos;+ Contact.LastName</formula>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact (Third Party)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountThirdParty__c</valueField>
            </filterItems>
            <infoMessage>Depends on Account (Third Party).</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases(Third Party)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy_User__c</fullName>
        <formula>IF(CreatedById = $User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy$User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerRecordType__c</fullName>
        <formula>IF(CASE( Case_Record_Type_API__c , 
&quot;External_System&quot;, &apos;CU&apos;, 
&quot;Logistics&quot;, &apos;CU&apos;,
&quot;TechnicalPDK&quot;, &apos;CU&apos;,
&apos;NA&apos;)=&apos;CU&apos;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerRecordType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Not_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Not Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date/Time Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Acknowledged_End__c</fullName>
        <label>Date/Time Acknowledged(End)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Acknowledged__c</fullName>
        <label>Date/Time Acknowledged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_First_Response__c</fullName>
        <description>Calculate the Case first response time based on the case comment\ chatter comment.</description>
        <label>Date/Time First Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_In_Progress_End__c</fullName>
        <label>Date/Time In Progress(End)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_In_Progress__c</fullName>
        <label>Date/Time In Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_New_End__c</fullName>
        <label>Date/Time New(End)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_OnHold_End__c</fullName>
        <label>Date/Time OnHold(End)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_OnHold__c</fullName>
        <label>Date/Time OnHold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Reopen_End__c</fullName>
        <label>Date/Time Reopen(End)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Reopen__c</fullName>
        <label>Date/Time Reopen</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Resolved_Pending_PDK_Release__c</fullName>
        <label>Date/Time Resolved  Pending PDK Release</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Verified__c</fullName>
        <label>Date/Time Verified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Device__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Device__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountThirdParty__c</valueField>
            </filterItems>
            <infoMessage>Depends on Account Name or Account (Third Party).</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>